syntax = "proto3";

option go_package="micro-store/order-management/proto";


// Requests

message AllocateQuantityRequest { int32 itemId = 1; sint32 count = 2;}

// Responses

message AllocationResponse { bool ok = 1; optional string message = 2; }


service InventoryService {
    rpc AllocateItemQuantity(AllocateQuantityRequest) returns (AllocationResponse) {}
}
